apps/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: lidarr
  labels:
    app.kubernetes.io/name: lidarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: lidarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: lidarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:3.1.0.4875-ls29@sha256:219df4d6d1375e9a2509ecce185c59baf59c2bb241ba54ec0aa39a419a0344cd
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - NET_RAW
          ports:
            - name: http
              containerPort: 8686
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ping
              port: 8686
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 2
            failureThreshold: 5
          livenessProbe:
            httpGet:
              path: /ping
              port: 8686
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 2
            failureThreshold: 5
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          volumeMounts:
            - name: lidarr-pvc
              mountPath: /config
            - name: music-nfs
              subPath: music
              mountPath: /music
              readOnly: false
            - name: run-volume
              mountPath: /run
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: lidarr-pvc
          persistentVolumeClaim:
            claimName: lidarr-pvc
        - name: music-nfs
          nfs:
            server: 192.168.20.12
            path: /mnt/ssd1/media
        - name: run-volume
          emptyDir: {}
        - name: tmp-volume
          emptyDir: {}
